# citrix-launcher

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
assets/icons/: citrix-vdi-launcher.icns
docs/agent-handoff/: ARCHITECTURE.md  BACKLOG.md  CONFIGURATION.md  DECISIONS.md  DEVELOPMENT.md  PRODUCT.md  README.md  SECURITY.md  TROUBLESHOOTING.md
docs/ui-ux/: UI_UX_SPEC.md
packaging/: build-linux.sh  build-macos.sh  build-windows.ps1
packaging/linux/: citrix-vdi-launcher.desktop
packaging/macos/: Info.plist.in  README-RU.txt  install-macos.command
src/: automation.rs  config.rs  crypto.rs  lib.rs  main.rs  network.rs
tools/: generate_icons.py
